; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/osx/dos/extr_39380.c_find_second_addr.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/osx/dos/extr_39380.c_find_second_addr.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [15 x i8] c"trying 0x%llx\0A\00", align 1
@.str.1 = private unnamed_addr constant [16 x i8] c"got it: 0x%llx\0A\00", align 1
@.str.2 = private unnamed_addr constant [9 x i8] c"no luck\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @find_second_addr(i32 %0, i32 %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  store i32 %0, i32* %5, align 4
  store i32 %1, i32* %6, align 4
  store i32 %2, i32* %7, align 4
  %9 = load i32, i32* %5, align 4
  %10 = sub nsw i32 %9, 16777216
  store i32 %10, i32* %8, align 4
  br label %11

11:                                               ; preds = %28, %3
  %12 = load i32, i32* %8, align 4
  %13 = sext i32 %12 to i64
  %14 = icmp ult i64 %13, -548950507520
  br i1 %14, label %15, label %31

15:                                               ; preds = %11
  %16 = load i32, i32* %8, align 4
  %17 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str, i64 0, i64 0), i32 %16)
  %18 = load i32, i32* %8, align 4
  %19 = load i32, i32* %5, align 4
  %20 = load i32, i32* %6, align 4
  %21 = load i32, i32* %7, align 4
  %22 = call i32 @guess_second(i32 %18, i32 %19, i32 %20, i32 %21)
  %23 = icmp ne i32 %22, -536870212
  br i1 %23, label %24, label %28

24:                                               ; preds = %15
  %25 = load i32, i32* %8, align 4
  %26 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str.1, i64 0, i64 0), i32 %25)
  %27 = load i32, i32* %8, align 4
  store i32 %27, i32* %4, align 4
  br label %33

28:                                               ; preds = %15
  %29 = load i32, i32* %8, align 4
  %30 = add nsw i32 %29, 16
  store i32 %30, i32* %8, align 4
  br label %11

31:                                               ; preds = %11
  %32 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str.2, i64 0, i64 0))
  store i32 0, i32* %4, align 4
  br label %33

33:                                               ; preds = %31, %24
  %34 = load i32, i32* %4, align 4
  ret i32 %34
}

declare dso_local i32 @printf(i8*, ...) #1

declare dso_local i32 @guess_second(i32, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
